Test mvn dev profile

--- a/.travis.yml
+++ b/.travis.yml
@@ -64,9 +64,9 @@ script:
   - cd $TRAVIS_BUILD_DIR/$REP
   - yo jhipster --force --no-insight
   - ls -al
-  - docker-compose -f docker-compose-prod.yml up -d
+  - if [ $REP == 'sample-app-mongodb' ]; docker-compose -f docker-compose-prod.yml up -d; fi
   - sleep 10
-  - mvn -Pprod &
+  - mvn &
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp ; sleep 10
