--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ install:
   - npm install -g bower
   - npm install -g grunt-cli
   - npm install -g gulp
-  - npm install -g generator-jhipster@2.21.1
-  - git clone https://github.com/jhipster/generator-jhipster.git
-  - cd $TRAVIS_BUILD_DIR/generator-jhipster
-  - npm link
+  - npm install -g generator-jhipster@2.22.0
+  # - git clone https://github.com/jhipster/generator-jhipster.git
+  # - cd $TRAVIS_BUILD_DIR/generator-jhipster
+  # - npm link
   #--------------------------------------------------
   # install docker-compose
   #--------------------------------------------------
@@ -64,17 +64,18 @@ script:
   - cd $TRAVIS_BUILD_DIR/$REP
   - yo jhipster --force --no-insight
   - ls -al
-  - if [ $REP == 'sample-app-postgresql' ]; then docker-compose up -d; fi  
-  - if [ $REP == 'sample-app-mongodb' ]; then docker-compose up -d; fi
+  # - if [ $REP == 'sample-app-postgresql' ]; then docker-compose up -d; fi  
+  # - if [ $REP == 'sample-app-mongodb' ]; then docker-compose up -d; fi
+  - docker-compose -f docker-compose-prod.yml up -d
   - sleep 10
-  - mvn &
+  - mvn -Pprod &
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp ; sleep 10
-  - mvn -Pprod
-  - sleep 60
-  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  - fuser -k 8080/tcp ; sleep 10
+  # - mvn -Pprod
+  # - sleep 60
+  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  # - fuser -k 8080/tcp ; sleep 10
   #---------------------------------------------
   # jhipster-sample-app
   #---------------------------------------------
