--- a/.travis.yml
+++ b/.travis.yml
@@ -56,28 +56,21 @@ install:
 env:
   matrix:
   - REP=sample-app
-  - REP=sample-app-postgresql
-  - REP=sample-app-mongodb
+  # - REP=sample-app-postgresql
+  # - REP=sample-app-mongodb
 jdk:
   - oraclejdk8
 script:
   - cd $TRAVIS_BUILD_DIR/$REP
   - yo jhipster --force --no-insight
   - ls -al
-  # try start in development profile
-  - if [ $REP == 'sample-app-postgresql' ]; then docker-compose up -d; fi
-  - if [ $REP == 'sample-app-mongodb' ]; then docker-compose up -d; fi
+  # start docker container => can use the same for development and production profile
+  - docker-compose -f docker-compose-prod.yml up -d
   - sleep 10
   - mvn &
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
   - fuser -k 8080/tcp ; sleep 10
-  - if [ $REP == 'sample-app-postgresql' ]; then docker-compose stop; fi
-  - if [ $REP == 'sample-app-mongodb' ]; then docker-compose stop; fi
-  - sleep 5
-  # try start in production profile
-  - docker-compose -f docker-compose-prod.yml up -d
-  - sleep 10
   - mvn -Pprod &
   - sleep 120
   - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
