--- a/.travis.yml
+++ b/.travis.yml
@@ -22,22 +22,22 @@ install:
   #--------------------------------------------------
   # install docker-compose
   #--------------------------------------------------
-  - curl -L https://github.com/docker/compose/releases/download/1.4.2/docker-compose-`uname -s`-`uname -m` > docker-compose
-  - sudo mv docker-compose /usr/local/bin/docker-compose
-  - sudo chmod +x /usr/local/bin/docker-compose
+  # - curl -L https://github.com/docker/compose/releases/download/1.4.2/docker-compose-`uname -s`-`uname -m` > docker-compose
+  # - sudo mv docker-compose /usr/local/bin/docker-compose
+  # - sudo chmod +x /usr/local/bin/docker-compose
   #--------------------------------------------------
   # download docker images
   #--------------------------------------------------
-  - docker pull mysql
+  # - docker pull mysql
   # - docker pull postgres
   # - docker pull mongo
   # - docker pull cassandra
   #--------------------------------------------------
   # clone and get dependency offline
   #--------------------------------------------------
-  # - cd $TRAVIS_BUILD_DIR/
+  - cd $TRAVIS_BUILD_DIR/
   - git clone https://github.com/jhipster/jhipster-sample-app.git
-  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/ && mvn dependency:go-offline
+  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/ && mvn dependency:go-offline
   #--------------------------------------------------
   # check version
   #--------------------------------------------------
@@ -66,14 +66,15 @@ script:
   # - yo jhipster --force --no-insight
   - ls -al
   # start docker container => can use the same for development and production profile
-  - echo "  privileged: true" >> docker-compose-prod.yml
-  - docker-compose -f docker-compose-prod.yml up -d
+  - echo "  privileged: true" >> $TRAVIS_BUILD_DIR/$REP/docker-compose-prod.yml
+  - cat docker-compose-prod.yml
+  # - docker-compose -f docker-compose-prod.yml up -d
   # - docker run --privileged -d -p 3306:3306 -e MYSQL_USER=root -e MYSQL_ALLOW_EMPTY_PASSWORD=yes -e MYSQL_DATABASE=sampleapplication mysql mysqld --lower_case_table_name=1
-  - sleep 10
-  - mvn -Pprod &
-  - sleep 300
-  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  - fuser -k 8080/tcp ; sleep 10
+  # - sleep 10
+  # - mvn -Pprod &
+  # - sleep 300
+  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  # - fuser -k 8080/tcp ; sleep 10
   # - mvn -Pprod
   # - sleep 60
   # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
