--- a/.travis.yml
+++ b/.travis.yml
@@ -11,74 +11,74 @@ install:
   #--------------------------------------------------
   # install the full stack for JHipster
   #--------------------------------------------------
-  # - npm install -g yo
-  # - npm install -g bower
-  # - npm install -g grunt-cli
-  # - npm install -g gulp
-  # - npm install -g generator-jhipster@2.22.0
-  # - git clone https://github.com/jhipster/generator-jhipster.git
-  # - cd $TRAVIS_BUILD_DIR/generator-jhipster
-  # - npm link
+  - npm install -g yo
+  - npm install -g bower
+  - npm install -g grunt-cli
+  - npm install -g gulp
+  - npm install -g generator-jhipster@2.22.0
+  #--------------------------------------------------
+  # use last version of jhispter -> snapshot
+  #--------------------------------------------------
+  - git clone https://github.com/jhipster/generator-jhipster.git
+  - cd $TRAVIS_BUILD_DIR/generator-jhipster
+  - npm link
   #--------------------------------------------------
   # install docker-compose
   #--------------------------------------------------
-  # - curl -L https://github.com/docker/compose/releases/download/1.4.2/docker-compose-`uname -s`-`uname -m` > docker-compose
-  # - sudo mv docker-compose /usr/local/bin/docker-compose
-  # - sudo chmod +x /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/1.4.2/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - sudo mv docker-compose /usr/local/bin/docker-compose
+  - sudo chmod +x /usr/local/bin/docker-compose
   #--------------------------------------------------
   # download docker images
   #--------------------------------------------------
-  # - docker pull mysql
-  # - docker pull postgres
-  # - docker pull mongo
+  - docker pull mysql
+  - docker pull postgres
+  - docker pull mongo
   # - docker pull cassandra
   #--------------------------------------------------
   # clone and get dependency offline
   #--------------------------------------------------
   - cd $TRAVIS_BUILD_DIR/
   - git clone https://github.com/jhipster/jhipster-sample-app.git
-  # - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/ && mvn dependency:go-offline
+  - cd $TRAVIS_BUILD_DIR/jhipster-sample-app/ && mvn dependency:go-offline
   #--------------------------------------------------
   # check version
   #--------------------------------------------------
-  # - java -version
-  # - git --version
-  # - yo --version
-  # - mvn -v
-  # - node -v
-  # - npm -v
-  # - bower -v
-  # - grunt --version
-  # - gulp -v
-  # - grunt --version
-  # - docker version
-  # - docker-compose version
+  - java -version
+  - git --version
+  - yo --version
+  - mvn -v
+  - node -v
+  - npm -v
+  - bower -v
+  - grunt --version
+  - gulp -v
+  - grunt --version
+  - docker version
+  - docker-compose version
 env:
   matrix:
-  - REP=jhipster-sample-app
-  # - REP=sample-app
-  # - REP=sample-app-postgresql
-  # - REP=sample-app-mongodb
+  - REP=sample-app
+  - REP=sample-app-postgresql
+  - REP=sample-app-mongodb
 jdk:
   - oraclejdk8
 script:
   - cd $TRAVIS_BUILD_DIR/$REP
-  # - yo jhipster --force --no-insight
+  - yo jhipster --force --no-insight
   - ls -al
   # start docker container => can use the same for development and production profile
   - "echo '  privileged: true' >> $TRAVIS_BUILD_DIR/$REP/docker-compose-prod.yml"
-  - cat docker-compose-prod.yml
-  # - docker-compose -f docker-compose-prod.yml up -d
-  # - docker run --privileged -d -p 3306:3306 -e MYSQL_USER=root -e MYSQL_ALLOW_EMPTY_PASSWORD=yes -e MYSQL_DATABASE=sampleapplication mysql mysqld --lower_case_table_name=1
-  # - sleep 10
-  # - mvn -Pprod &
-  # - sleep 300
-  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  # - fuser -k 8080/tcp ; sleep 10
-  # - mvn -Pprod
-  # - sleep 60
-  # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
-  # - fuser -k 8080/tcp ; sleep 10
+  - docker-compose -f docker-compose-prod.yml up -d
+  - sleep 10
+  - mvn &
+  - sleep 120
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp ; sleep 10
+  - mvn -Pprod
+  - sleep 120
+  - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
+  - fuser -k 8080/tcp ; sleep 10
   #---------------------------------------------
   # jhipster-sample-app
   #---------------------------------------------
