--- a/.travis.yml
+++ b/.travis.yml
@@ -76,6 +76,7 @@ script:
   - docker-compose -f docker-compose-prod.yml up -d
   - sleep 10
   - if [ $REP == "sample-app-cassandra" ]; then docker exec -it sampleCassandra-prod-cassandra init; fi
+  - if [ $REP == "sample-app-cassandra" ]; then docker logs sampleCassandra-prod-cassandra; fi
   # - mvn &
   # - sleep 120
   # - curl --retry 10 --retry-delay 5 -I http://localhost:8080/ | grep "HTTP/1.1 200 OK"
