--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
   #--------------------------------------------------
   # use a snapshot version of jhispter
   #--------------------------------------------------
-  - git clone -b postgresql-use-spring-datasource-url https://github.com/pascalgrimaud/generator-jhipster.git
+  - git clone -b spring_boot_1_3 https://github.com/jhipster/generator-jhipster.git
   - cd $TRAVIS_BUILD_DIR/generator-jhipster
   - npm link
   #--------------------------------------------------
@@ -73,6 +73,9 @@ script:
   #--------------------------------------------------
   - cd $TRAVIS_BUILD_DIR/$REP
   - yo jhipster --force --no-insight
+  - if [ $REP == "sample-app" ] || [ $REP == "sample-app-postgresql" ] || [ $REP == "sample-app-mongodb" ] || [ $REP == "sample-app-elasticsearch" ]; then yo jhipster:entity BankAccount --force; fi
+  - if [ $REP == "sample-app" ] || [ $REP == "sample-app-postgresql" ] || [ $REP == "sample-app-elasticsearch" ]; yo jhipster:entity Label --force; fi
+  - if [ $REP == "sample-app" ] || [ $REP == "sample-app-postgresql" ] || [ $REP == "sample-app-elasticsearch" ]; yo jhipster:entity Operation --force; fi
   - ls -al
   #--------------------------------------------------
   # Travis-CI is not stable with docker... so start container with privileged
