--- a/.travis.yml
+++ b/.travis.yml
@@ -68,10 +68,10 @@ env:
 jdk:
   - oraclejdk8
 script:
-  - ./scripts/01-generate-project.sh
-  - ./scripts/02-generate-entities.sh
+  - $TRAVIS_BUILD_DIR/$REP/scripts/01-generate-project.sh
+  - $TRAVIS_BUILD_DIR/$REP/scripts/02-generate-entities.sh
   - ls -al $TRAVIS_BUILD_DIR/$REP
-  - ./scripts/03-docker-compose.sh
+  - $TRAVIS_BUILD_DIR/$REP/scripts/03-docker-compose.sh
   #--------------------------------------------------
   # start in development profile
   #--------------------------------------------------
